extract static serving